tickets/infra/k8s/services/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: ticketing.com
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
    # Hack but this allows internal communications using the host below
    #   following the format 'http://<ingress-controller-name>.<namespace>'
    #    You can also remove the host tag
    #
    # This is because internal calls are not coming from ticketing.com
    # You could also set the host to '<ingress-controller-name>.<namespace>' this would still work but name & namespace may change
    - host: ingress-nginx-controller.ingress-nginx # Specifying so that localhost & 127.0.0.1 don't point to this app
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
